fatto l'head del main_content
aggiunto pulsante upgrade

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="main_content">
 
                 <div class="head">
-                    
+                    <a href="" class="upgrade">EFFETTUA L'UPGRADE</a>
                 </div>
 
                 <div class="brani">
