--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body class="debug">
+<body class="">
 
     <div class="viewport">
 
@@ -18,6 +22,54 @@
         <main class="clearfix">
 
             <div class="sidebar">
+
+                <div class="column">
+
+                    <div class="start">
+
+                        <div class="logo">
+                            <img src="./img/favicon.ico" alt="">
+                            <h1 class="logo">Spotify <span>&reg;</span></h1>
+                        </div>
+
+                        <div class="search">
+                            <ul>
+                                <li class="side_li selected"><a class="link" href=""><i class="fal fa-home-alt"></i>Home</a></li>
+                                <li class="side_li"><a class=" link " href="">Cerca</a></li>
+                                <li class="side_li"><a class="link" href="">La tua libreria</a></li>
+                            </ul>
+                            
+                        </div>
+
+                        <div class="playlist">
+                            <h3 class="elenco">Playlist</h3>
+
+                            <ul>
+                                <li class="side_li"><a class=" link " href="">Nome Playlist</a></li>
+                                <li class="side_li"><a class=" link " href="">Nome Playlist</a></li>
+                                <li class="side_li"><a class=" link " href="">Nome Playlist</a></li>
+                                <li class="side_li"><a class=" link " href="">Nome Playlist</a></li>
+                                <li class="side_li"><a class=" link " href="">Nome Playlist</a></li>
+                                <li class="side_li"><a class=" link " href="">Nome Playlist</a></li>
+                                <li class="side_li"><a class=" link " href="">Nome Playlist</a></li>
+                            </ul>
+
+                        </div>
+
+                    </div>
+
+                    <div class="end side_li">
+                        <ul>
+                            <li class="side_li"><a class=" link " href="">Installa App</a></li>
+                        </ul>
+
+                        <hr class="">
+
+                        <h3 class="side_li">John Doe</h3>
+
+                    </div>
+
+                </div>
 
             </div>
 
