aggiunto filtro per i brani in cima al main

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
                         <div class="search">
                             <ul>
-                                <li class="side_li selected"><a class="link overwhite" href=""> <i class="fal fa-home-alt"></i> Home</a></li>
-                                <li class="side_li"><a class=" link overwhite" href=""> <i class="far fa-search"></i> Cerca</a></li>
-                                <li class="side_li"><a class="link overwhite" href=""> <i class="fal fa-books"></i> La tua libreria</a></li>
+                                <li class="side_li link selected"><a class="link overwhite" href=""> <i class="fal fa-home-alt"></i> Home</a></li>
+                                <li class="side_li link"><a class=" link overwhite" href=""> <i class="far fa-search"></i> Cerca</a></li>
+                                <li class="side_li link"><a class="link overwhite" href=""> <i class="fal fa-books"></i> La tua libreria</a></li>
                             </ul>
                             
                         </div>
@@ -49,14 +49,14 @@
                             <h3 class="elenco">Playlist</h3>
 
                             <ul>
-                                <li class="side_li"><a class=" link overwhite" href=""><i class="fas fa-plus-square"></i> Crea Playlist</a></li>
-                                <li class="side_li"><a class=" link overwhite" href="">Nome Playlist</a></li>
-                                <li class="side_li"><a class=" link overwhite" href="">Nome Playlist</a></li>
-                                <li class="side_li"><a class=" link overwhite" href="">Nome Playlist</a></li>
-                                <li class="side_li"><a class=" link overwhite" href="">Nome Playlist</a></li>
-                                <li class="side_li"><a class=" link overwhite" href="">Nome Playlist</a></li>
-                                <li class="side_li"><a class=" link overwhite" href="">Nome Playlist</a></li>
-                                <li class="side_li"><a class=" link overwhite" href="">Nome Playlist</a></li>
+                                <li class="side_li link"><a class=" link overwhite" href=""><i class="fas fa-plus-square"></i> Crea Playlist</a></li>
+                                <li class="side_li link"><a class=" link overwhite" href="">Nome Playlist</a></li>
+                                <li class="side_li link"><a class=" link overwhite" href="">Nome Playlist</a></li>
+                                <li class="side_li link"><a class=" link overwhite" href="">Nome Playlist</a></li>
+                                <li class="side_li link"><a class=" link overwhite" href="">Nome Playlist</a></li>
+                                <li class="side_li link"><a class=" link overwhite" href="">Nome Playlist</a></li>
+                                <li class="side_li link"><a class=" link overwhite" href="">Nome Playlist</a></li>
+                                <li class="side_li link"><a class=" link overwhite" href="">Nome Playlist</a></li>
                             </ul>
 
                         </div>
@@ -86,6 +86,18 @@
                 </div>
 
                 <div class="brani">
+
+                    <div class="filter">
+
+                        <ul>
+                            <li class="link"><a class=" link overwhite" href="">IN EVIDENZA</a> <hr class="picked"></li>
+                            <li class="link"><a class=" link overwhite" href="">PODCAST</a></li>
+                            <li class="link"><a class=" link overwhite" href="">CLASSIFICHE</a></li>
+                            <li class="link"><a class=" link overwhite" href="">GENERI E MOOD</a></li>
+                            <li class="link"><a class=" link overwhite" href="">NUOVE USCITE</a></li>
+                            <li class="link"><a class=" link overwhite" href="">SCOPRI</a></li>
+                        </ul>
+                    </div>
                     
                 </div>
 
