aggiunta sezione destra del footer

--- a/index.html
+++ b/index.html
@@ -261,6 +261,16 @@
 
                 <div class="right">
 
+                    <div>
+                        <i class="fas fa-bars"></i>
+                        <i class="fas fa-desktop"></i>
+                        <i class="fas fa-volume-up"></i>
+                    </div>
+                    
+                    <div class="volume">
+                        <div></div>
+                    </div>
+
                 </div>
 
             </div>
