aggiunta sezione centrale del footer

--- a/index.html
+++ b/index.html
@@ -256,6 +256,21 @@
                 </div>
 
                 <div class="middle">
+                    <div>
+                        <i class="fas fa-random"></i>
+                            <i class="fas fa-step-backward"></i>
+                            <i class="far fa-play-circle big"></i>
+                            <i class="fas fa-step-forward"></i>
+                            <i class="fas fa-redo-alt"></i>
+                    </div>
+
+                    <div class="timebar">
+                        <h3>0:25</h3>
+                        <div class="volume">
+                            <div></div>
+                        </div>
+                        <h3>4:35</h3>
+                    </div>
 
                 </div>
 
