--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
                         <div class="search">
                             <ul>
-                                <li class="side_li link selected"><a class="link overwhite" href=""><img class="icon" src="./img/home.svg" alt=""> Home</a></li>
-                                <li class="side_li link"><a class=" link overwhite" href=""><img class="icon" src="./img/search.svg" alt=""> Cerca</a></li>
-                                <li class="side_li link"><a class="link overwhite" href=""><img class="icon" src="./img/libreria.svg" alt=""> La tua libreria</a></li>
+                                <li class="side_li link selected"><a class="link overwhite" href=""><img class="icon" src="./img/home.svg" alt=""> <span class="hidden">Home</span></a></li>
+                                <li class="side_li link"><a class=" link overwhite" href=""><img class="icon" src="./img/search.svg" alt=""> <span class="hidden">Cerca</span></a></li>
+                                <li class="side_li link"><a class="link overwhite" href=""><img class="icon" src="./img/libreria.svg" alt=""> <span class="hidden">La tua libreria</span></a></li>
                             </ul>
                             
                         </div>
@@ -68,7 +68,7 @@
                     <!-- brano corrente -->
                     <div class="end side_li">
                         <ul>
-                            <li class="side_li link"><img class="download" src="./img/download.svg" alt=""><a class=" link overwhite" href=""> Installa App</a></li>
+                            <li class="side_li link"><img class="download" src="./img/download.svg" alt=""><a class=" link overwhite" href=""> <span class="hidden">Installa App</span></a></li>
                         </ul>
 
                         <hr class="hidden">
@@ -236,8 +236,10 @@
                     </div>
 
                     <div class="save">
-                        <i class="far fa-heart"></i>
-                        <i class="far fa-folder"></i>
+                        <ul>
+                            <li class="link"><a class=" link overwhite" href=""><i class="far fa-heart"></i></a></li>
+                            <li class="link"><a class=" link overwhite" href=""><i class="far fa-folder"></i></i></a></li>
+                        </ul>
                     </div>
                     
                 </div>
